<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_ip" />

        <EditText
            android:id="@+id/server_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/server_ip_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:text="@string/default_ip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_port" />

        <EditText
            android:id="@+id/server_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/server_port_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@string/default_port" />

    </LinearLayout>

    <Button
        android:id="@+id/apply_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_settings" />

</LinearLayout>