<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panic_buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PanicFragment">

    <Button
        android:id="@+id/missed_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFEB3B"
        android:text="@string/panic_missed_connection" />

    <Button
        android:id="@+id/tampered_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"
        android:text="@string/panic_tampering" />

    <Button
        android:id="@+id/package_lost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:text="@string/panic_package_lost" />

    <Button
        android:id="@+id/urgent_assistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/panic_urgent_assistance" />
</LinearLayout>