<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/ic_location_searching" />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/check_in_location_searching" />

    <ImageView
        android:id="@+id/location_correct_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/ic_error_outline" />

    <TextView
        android:id="@+id/location_correct_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/check_in_location_incorrect" />

    <ImageView
        android:id="@+id/network_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/ic_wifi_off" />

    <TextView
        android:id="@+id/network_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/check_in_network_not_connected" />

    <Button
        android:id="@+id/check_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="start|top"
        android:layout_margin="20dp"
        android:enabled="false"
        android:text="@string/check_in_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Register" />

        <Button
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Verify" />
    </LinearLayout>

</GridLayout>